--- a/main.css
+++ b/main.css
@@ -7,3 +7,13 @@ html, body, main {
     height: 100%;
     background-color: #2e2e2e;
 }
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+canvas {
+    background-color: #97a580;
+}
