--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@
 html, body, main {
     height: 100%;
     background-color: #2e2e2e;
+    overflow: hidden;
 }
 
 main {
@@ -27,6 +28,8 @@ main {
     display: flex;
     padding: 3px;
     background-color: var(--background-color);
+    align-items: center;
+    justify-content: center;
 }
 
 .display-menu {
@@ -54,6 +57,32 @@ main {
 .game {
     display: flex;
 }
+.mobile {
+    flex-direction: column-reverse;
+}
+
+.mobile .info-panel {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.mobile .info-value-wrapper {
+    font-size: 20px;
+}
+
+.mobile .info-title {
+    font-size: 20px;
+}
+
+.mobile .info-panel-left {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.mobile .info-row {
+    flex-basis: 50%;
+}
 
 .info-title {
     font-size: 30px;
@@ -65,6 +94,11 @@ main {
     font-family: "digital-7";
     font-size: 45px;
     position: relative;
+}
+
+.info-display {
+    position: relative;
+    margin: 0 10px 0 -10px;
 }
 
 .info-value-background {
