--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: 'digital-7';
-    src: url('/src/fonts/digital/digital-7.ttf');
+    src: url('/src/fonts/digital-7.ttf');
 }
 
 :root {
