--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,128 +1,5 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-@font-face {
-    font-family: 'digital-7';
-    src: url('/src/fonts/digital-7.ttf');
-}
-
-:root {
-    --background-color: #97a580;
-}
-
-html, body, main {
-    height: 100%;
-    background-color: #2e2e2e;
-    overflow: hidden;
-}
-
-main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.display-game {
-    display: flex;
-    padding: 3px;
-    background-color: var(--background-color);
-    align-items: center;
-    justify-content: center;
-}
-
-.display-menu {
-    background-color: var(--background-color);
-    padding: 10px;
-    position: relative;
-}
-
-#backing {
-    position: absolute;
-    background-color: var(--background-color);
-}
-
-#display {
-    z-index: 1;
-    touch-action: manipulation;
-    border: 2px solid black;
-}
-
-#block-display {
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: 1;
-}
-
-.game {
-    display: flex;
-}
-.mobile {
-    flex-direction: column-reverse;
-}
-
-.mobile .info-panel {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.mobile .info-value-wrapper {
-    font-size: 20px;
-}
-
-.mobile .info-title {
-    font-size: 20px;
-}
-
-.mobile .info-panel-left {
-    flex: 1;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.mobile .info-row {
-    flex-basis: 50%;
-}
-
-.info-title {
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.info-value-wrapper {
-    display: inline-block;
-    font-family: "digital-7";
-    font-size: 45px;
-    position: relative;
-}
-
-.info-display {
-    position: relative;
-    margin: 0 10px 0 -10px;
-}
-
-.info-value-background {
-    color: #8b9876;
-}
-
-.info-value {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-.info-footer {
-    display: flex;
-    align-items: center;
-}
-
-.menu-sound, .menu-pause {
-    cursor: pointer;
-}
-
-.game:not(.mobile) .info-footer {
-    position: absolute;
-    bottom: 10px;
-}
+@import url(./main.scss);
+@import url(./theme.scss);
+@import url(./mobile.scss);
+@import url(./game.scss);
+@import url(./menu.scss);
